[package]
name = "denotest"
version = "0.1.0"
edition = "2024"

[dependencies]
deno_core = "0.369.0"
anyhow = "1.0.100"
tokio = { version = "1.48", features = ["full"] }
serde_v8 = "0.278.0"
serde_json = "1.0.145"
#deno_web = "0.252.0"
base64 = "0.22"
md-5 = "0.10"
sha1 = "0.10"
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
rand = "0.8"